# Symbolic

./: .gitignore  Advanced Tools.toolsets.jsonc  BUG_ANALYSIS_INFINITE_LOOP.txt  CIRCULAR_IMPORT_RESOLUTION.md  DATA_VOLUME_PROTECTION.md  DEPLOYMENT_SUCCESS.md  EMERGENCY_LOOP_LOG.txt  INTEGRATION_SUMMARY.md  NEXT_LEVEL_EXPERIMENTS.py  OPUS_ENHANCEMENT_REQUEST.md  OPUS_PROMPT_READY.md  README.md  SECURITY_RECOMMENDATIONS.md  TESTING_SUCCESS.py  agi_log.txt  analyze_coverage.py  analyze_tests.py  bootstrap_agi.py  check_coverage.py  cleanup_resources.py  conciousness.patch  create_agents.py  curiosity_engine.py  debug_agi.py  demo_agent_pool.py  deploy_agi.py  deploy_cost_optimized.py  direct_mutation_test.py  direct_mutation_test_results.json  discover_agi_desires.py  docker-compose.yml  emergency_fix.py  explore_drives.py  explore_vision.py  fix_agent_tests.py  fix_agi_test.py  fix_tests.py  focused_mutation_experiment.py  governor.patch  install_chocolatey_redis.py  (+63 more)
.github/: copilot-instructions.md
docs/: Migration_Notes.md  TEST_REPORT.md  contributing.md  core_concepts.md  extending_the_agi.md  test_model_tiering.md
patches/: goal_execution_patch.py
scripts/: find_duplicates.py  run_agi.py
symbolic_agi/: Untitled-1.diff  advanced_reasoning_system.py  agent.py  agent_pool.py  agi_controller.py  api_client.py  cockpit.py  code_dump.txt  config.py  config_manager.py  consciousness.py  db_models.py  ethical_governance.py  ethical_governor.py  execution_engine.py  execution_metrics.py  execution_strategies.py  execution_unit.py  fixed_upgrade.patch  goal_management.py  input_processor.py  knowledge_base.py  llm_world_plugin.py  long_term_memory.py  message_bus.py  meta_cognition.py  metrics.py  micro_world.py  perception_processor.py  planner.py  prometheus_monitoring.py  prompts.py  py.py  reasoning_agent.py  reasoning_orchestrator.py  reasoning_skills.py  recursive_introspector.py  requirement.txt  requirements.txt  robust_qa_agent.py  (+11 more)
symbolic_agi/skills/: __init__.py  research_topic.py  respond_to_user.py  review_code.py  review_plan.py  write_code.py
symbolic_agi/tests/: conftest.py  run_all_tests.py  test_agent.py  test_bug_fixes.py  test_config.py  test_consciousness.py  test_consciousness_emotional.py  test_core_components.py  test_emotional_integration.py  test_ethics.py  test_integration.py  test_integration_complete.py  test_integration_fixes.py  test_meta_cognition.py  test_metrics.py  test_micro_world.py  test_reasoning.py  test_self_improvement_experiment.py  test_setup.py  test_tool_plugin.py  test_tool_plugin_comprehensive.py
symbolic_agi/tools/: # Code Citations.md  base.py  code.py  file_system.py  web.py
test_workspace/: microworld_state.json
tests/: __init__.py  test_api_endpoints.py  test_basic_functionality.py  test_integration.py  test_skill_manager.py  test_smoke.py  test_tool_functionality.py
