[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "symbolic-agi"
version = "1.0.0"
description = "A goal-driven, learning AGI with a modular cognitive architecture."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "openai",
    "pydantic",
    "redis",
    "fastapi",
    "uvicorn",
    "colorlog",
    "watchfiles",
    "playwright",
    "beautifulsoup4",
    "requests",
    "ddgs",
    "numpy",
    "faiss-cpu",
    "aiosqlite",
    "aiofiles",
    "streamlit" # <-- ADD THIS
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
    "black",
    "mypy"
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q -sv"
testpaths = [
    "tests",
]
asyncio_mode = "auto"

[tool.setuptools]
packages = ["symbolic_agi"]