[tool.poetry]
name         = "symbolic-agi"
version      = "0.1.0"
description  = "A symbolic AGI system with consciousness, meta‑cognition, and self‑modification capabilities"
authors      = ["Your Name <your.email@example.com>"]
license      = "MIT"
readme       = "README.md"
packages     = [{ include = "symbolic_agi" }]
keywords     = ["agi", "ai", "consciousness", "symbolic", "meta-cognition"]
homepage     = "https://github.com/yourusername/symbolic-agi"
repository   = "https://github.com/yourusername/symbolic-agi"
documentation = "https://github.com/yourusername/symbolic-agi"

[tool.poetry.dependencies]
python              = "^3.10"
redis               = "^4.5"
numpy               = "^1.24"
faiss-cpu           = "^1.7"          # use 1.7.4 on Win+Py3.12 if wheels fail
pydantic            = "^2.0"
openai              = "^1.0"
anthropic           = "^0.7"
selenium            = "^4.0"
colorlog            = "^6.7"
prometheus-client   = "^0.16"
aiofiles            = "^23.0"
aiohttp             = "^3.8"
httpx               = "^0.24"
fastapi             = "^0.100"
uvicorn             = "^0.23"
requests            = "^2.31"
beautifulsoup4      = "^4.12"
duckduckgo-search   = "^4.0"
aiosqlite           = "^0.19"
playwright          = "^1.40"

[tool.poetry.group.dev.dependencies]
pytest            = "^7.0"
pytest-asyncio    = "^0.21"
pytest-mock       = "^3.10"
pytest-cov        = "^4.1"
pytest-timeout    = "^2.1"
pytest-xdist      = "^3.3"
mypy              = "^1.5"
ruff              = "^0.1"
black             = "^23.0"
pre-commit        = "^3.3"
grep              = "^0.3"

[tool.poetry.scripts]
symbolic-agi = "symbolic_agi.run_agi:main"

[build-system]
requires      = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"
